Add 'US' to AMER region mapping

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                 br.path_category,
                 CASE 
                   WHEN bpc.commercial_region_code IN ('EMEA', 'APAC') THEN bpc.commercial_region_code
-                  WHEN bpc.commercial_region_code IN ('Canada', 'US East', 'US West', 'LATAM') THEN 'AMER'
+                  WHEN bpc.commercial_region_code IN ('Canada', 'US East', 'US West', 'LATAM', 'US') THEN 'AMER'
                   ELSE 'Unknown'
                 END AS region_code,
                 CASE 
