Update leads chart title

--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
             <div class="chart-section">
                 <div class="chart-header">
                     <div>
-                        <h2 class="chart-title">🎯 Plus Leads Self-Serve Rate by Region</h2>
-                        <p class="chart-subtitle">Daily % of new Plus leads with routing_segment = 'self-serve' (Jan 2026+)</p>
+                        <h2 class="chart-title">% of Plus Leads Routed to Self-Serve since Jan 01, 2026</h2>
+                        <p class="chart-subtitle">Daily breakdown by region</p>
                     </div>
                 </div>
                 <div class="chart-container">
